--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@
   font-weight: 700;
   font-style: normal;
   color: #222;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 .aaa{
   height:2000px;
