--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,6 @@
 header{
     display: flex;
     justify-content: space-around;
-    position: fixed;
-    top:0;
-    left: 0;
     width:100%;
     z-index: 3;
 }
@@ -24,4 +21,103 @@ header{
     text-decoration: underline;
     font-weight: 600;
     font-size: 0.95rem;
+}
+.logo{
+    display: flex;
+    align-items: center;
+}
+.logo p{
+    margin:0;
+    padding-left: 15px;
+    font-size:30px;
+    font-weight: bold;
+}
+
+
+/*burger*/
+/* скрываем чекбокс */
+#menu__toggle {
+    opacity: 0;
+}
+/* стилизуем кнопку */
+.menu__btn {
+    display: flex; /* используем flex для центрирования содержимого */
+    align-items: center;  /* центрируем содержимое кнопки */
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+    z-index: 1;
+}
+/* добавляем "гамбургер" */
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #616161;
+}
+.menu__btn > span::before {
+    content: '';
+    top: -8px;
+}
+.menu__btn > span::after {
+    content: '';
+    top: 8px;
+}
+/* контейнер меню */
+.menu__box {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 0;
+    right: -100%;
+    border-radius: 50px 0 0 50px;
+    width: 300px;
+    margin: 0;
+    padding: 80px 0;
+    list-style: none;
+    text-align: center;
+    background-color: #ECEFF1;
+    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+}
+.pages a{
+    font-size: 30px!important;
+}
+/* элементы меню */
+.menu__item {
+    display: block;
+    padding: 12px 24px;
+}
+.menu__item:hover {
+    background-color: #CFD8DC;
+}#menu__toggle:checked ~ .menu__btn > span {
+     transform: rotate(45deg);
+ }
+#menu__toggle:checked ~ .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0);
+}
+#menu__toggle:checked ~ .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu__box {
+    visibility: visible;
+    right: 0;
+}
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+    transition-duration: .25s;
+}
+.menu__box {
+    transition-duration: .25s;
+}
+.menu__item {
+    transition-duration: .25s;
 }
